# ZeroMQ-Lib61850

./: 61850server-avg.Dockerfile  61850server.Dockerfile  CMakeLists.txt  Makefile  README.md  client_sub  client_sub.c  delay.py  diff-delay.py  gateway  gateway-gse  gateway-gse.Dockerfile  gateway-gse.c  gateway-ipc-gse.Dockerfile  gateway-ipc-gse.c  gateway.Dockerfile  gateway.c  monitor_resources.sh  outliers.py  plot.py  pub.Dockerfile  results.py  results.txt  test61850.yml  testzmq-gse-isol-scale.yml  testzmq-scale.yml  testzmq.yml  testzmq61850-gse.yml  testzmq61850.yml  wusub  wusub.c
goose_publisher/: goose-pub.Dockerfile  goose_publisher_example  goose_publisher_example.c
goose_subscriber/: 61850goose-sub.Dockerfile  CMakeLists.txt  goose_subscriber_example  goose_subscriber_example.c
plots/: case_study_d.py  delay.py  delay_case_study.py  monitor_pub.py  monitor_sub.py  outliers.py  plot.py  plot_25_april.py  plot_all_gate.py  plot_all_sub.py  results.py
pub-sub-ipc/: pub.Dockerfile  sub.Dockerfile  wuserver  wuserver.c  wusub  wusub.c
pub-sub-tcp/: wuserver  wuserver.c  wusub  wusub.c
tests/: testgse.yml  testipc-gse.yml  testipc.yml  testzmq-gse-isol-scale.yml  testzmq-gse-isol.yml  testzmq-gse.yml  testzmq-scale.yml  testzmq.yml  testzmq61850-gse.yml  testzmq61850.yml
tests/may/: testgse-p4-net.yml  testgse-p4.yml  testipc-gse-p4-net.yml  testipc-gse-p4.yml
tests/tests-25april/: testgse-p4.yml  testipc-gse-p4.yml  testipc-gse-scale.yml  testipc-p4.yml  testipc-scale.yml
